create rough sketch of etch-a-sketch board

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
     Copyright Isaiah Quigley 2024
     Completed as part of the course requirements for The Odin Project
  -->
- 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link 
+        rel="stylesheet"
+        href="style.css"
+    ></link>
     <script
         src="script.js"
         defer
@@ -17,5 +21,6 @@
 </head>
 <body>
     <h1>Etch-a-Sketch</h1>
+    <div class="container"></div>
 </body>
 </html>
